--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-RewriteEngine On
-
-RewriteCond %{REQUEST_URI} !^/public/
-RewriteRule ^(.*)$ /public/$1 [L,R=301]
+<IfModule mod_rewrite.c>
+   RewriteEngine On 
+   RewriteRule ^(.*)$ public/$1 [L]
+</IfModule>
